<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">物流管理系统</string>
    
    <string name="action_settings">Settings</string>
<string name="login_user_hint">请输入用户名或手机号</string>
<string name="login_hint_pwd">输入6-16位密码,字母或数字或组合</string>
<string name="regist_psd">请再次输入密码</string>
<string name="login_fgt_pwd">忘记密码?</string>
<string name="chose">选择用户</string>
<string name="login">登录</string>
<string name="regist">注册</string>
<string name="startlocation">开启定位</string>
<string name="stoplocation">停止定位</string>

<string-array name="spingarr">
     <item>用户</item>  
    <item>快递员</item>  
    <item>管理员</item>   
    </string-array>
     <string-array name="left_array">
        <item >主页</item>
        <item >应用管理</item>
        <item >搜索</item>
        <item >备份</item>
        <item >设置</item>
        <item >退出</item>
    </string-array>
</resources>
