<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_grey"
    android:orientation="vertical" >

    <include layout="@layout/main_top_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="30dp" >

                <EditText
                    android:id="@+id/regist_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/username_draw_xml"
                    android:drawablePadding="10dp"
                    android:ems="20"
                    android:focusable="true"
                    android:hint="@string/login_user_hint"
                    android:singleLine="true"
                    android:textColorHint="@color/color_4"
                    android:textSize="@dimen/new_size_3" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/spilt_line_color" />

                <EditText
                    android:id="@+id/regist_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/password_draw_xml"
                    android:drawablePadding="10dp"
                    android:ems="20"
                    android:hint="@string/login_hint_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/color_4"
                    android:textSize="@dimen/new_size_3" />
                 <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/spilt_line_color" />

                <EditText
                    android:id="@+id/regist_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.39"
                    android:background="@null"
                    android:drawableLeft="@drawable/password_draw_xml"
                    android:drawablePadding="10dp"
                    android:ems="20"
                    android:hint="@string/regist_psd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/color_4"
                    android:textSize="@dimen/new_size_3" />
                 <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/spilt_line_color" />

                <Spinner
                    android:id="@+id/spingarr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:background="@color/spilt_line_color"
                    android:hint="@string/chose" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@null" />

            

        </LinearLayout>

        <Button
            android:id="@+id/regist_button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_green"
            android:text="@string/regist"
            android:textColor="@color/white"
            android:textSize="@dimen/new_size_4" />

    </FrameLayout>

</LinearLayout>